src/objects/CventEvents__Respondent__c.object
<CustomObject>
    <description>Represents the respondent of a survey.</description>
    <fields>
        <fullName>CventEvents__Company__c</fullName>
        <description>Represents either the related contact&apos;s account name or lead&apos;s company.</description>
        <formula>IF(ISBLANK(CventEvents__Lead__c), CventEvents__Contact__r.Account.Name, CventEvents__Lead__r.Company)</formula>
        <inlineHelpText>Represents either the related contact&apos;s account name or lead&apos;s company.</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Participation</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__Email__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Lead__c), CventEvents__Contact__r.Email, CventEvents__Lead__r.Email)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__LastModifiedDate__c</fullName>
        <label>Last Modified Date (Cvent)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Surveys Participation</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondedDate__c</fullName>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondentCode__c</fullName>
        <label>Respondent Code</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondentName__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Lead__c),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__c, CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__c, CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName))</formula>
        <label>Respondent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondentStub__c</fullName>
        <externalId>true</externalId>
        <label>Respondent Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete Response</fullName>
                </value>
                <value>
                    <fullName>Partial Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__SurveyProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Program</label>
        <referenceTo>CventEvents__SurveyProgram__c</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__TransactionId__c</fullName>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the respondent unsubscribed from the survey.</description>
        <inlineHelpText>Indicates whether the respondent unsubscribed from the survey.</inlineHelpText>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Respondent</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__RespondentName__c</columns>
        <columns>CventEvents__Email__c</columns>
        <columns>CventEvents__Company__c</columns>
        <columns>CventEvents__SurveyProgram__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000000}</displayFormat>
        <label>Respondent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>